welcome.lessons.welcome.array.notriples.NoTriples.scala.error
array123:6: error: ';' expected but 'true' found.
  if (num1==num2 && num2==num3 && num3==true){retrun true}
                                                     ^